--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.6.5",
     "emailjs-com": "^3.2.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.6",
     "swiper": "^11.0.5"
   },
