--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
+    "@lottiefiles/react-lottie-player": "^3.5.4",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.6.5",
     "emailjs-com": "^3.2.0",
@@ -21,6 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.5",
+    "react-window": "^1.8.10",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.6",
