--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -28,18 +28,25 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
     steps:
-      - name: Deploy to Dev Server via SSH
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Step to add the SSH private key to the agent
+      - name: Add SSH Key
+        run: |
+          eval "$(ssh-agent -s)"   # Start the ssh-agent
+          ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"  # Add the private key from GitHub Secrets
+
+      # SSH and Deployment step
+      - name: SSH to VPS and Deploy
         uses: appleboy/ssh-action@v0.1.2
         with:
           host: ${{ secrets.DEV_HOST }}
           username: ${{ secrets.DEV_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            ssh -v root@82.165.239.219 << EOF
-             docker pull kasramahsouli/hamidi-client:dev
-             docker stop my-app || true
-             docker rm my-app || true
-             docker run -d -p 8080:5173 --name my-app kasramahsouli/hamidi-client:dev
-             EOF
+            docker pull kasramahsouli/hamidi-client:dev
+            docker stop my-app || true
+            docker rm my-app || true
+            docker run -d -p 8080:5173 --name my-app kasramahsouli/hamidi-client:dev
