--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -28,18 +28,9 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Step to add the SSH private key to the agent
-      - name: Add SSH Key
-        run: |
-          eval "$(ssh-agent -s)"   # Start the ssh-agent
-          ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"  # Add the private key from GitHub Secrets
-
-      # SSH and Deployment step
-      - name: SSH to VPS and Deploy
+      - name: Deploy to Dev Server via SSH
         uses: appleboy/ssh-action@v0.1.4
         with:
           host: ${{ secrets.DEV_HOST }}
