--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -28,10 +28,21 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+
     steps:
-      - name: Deploy to Dev Server via SSH
-        uses: appleboy/ssh-action@v0.1.4
+      # Step 1: Checkout the code from the repository
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Step 2: Add the SSH private key to the agent
+      - name: Add SSH Key to Agent
+        run: |
+          eval "$(ssh-agent -s)"   # Start the ssh-agent
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -  # Add the private key from GitHub Secrets to the agent
+
+      # Step 3: SSH into VPS and deploy using Docker commands
+      - name: SSH to VPS and Deploy
+        uses: appleboy/ssh-action@v0.1.2
         with:
           host: ${{ secrets.DEV_HOST }}
           username: ${{ secrets.DEV_USER }}
