Changes to yml file

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -30,16 +30,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the code from the repository
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Add the SSH private key to the agent
-      - name: Add SSH Key to Agent
+      - name: Test SSH Connection
         run: |
-          eval "$(ssh-agent -s)"   # Start the ssh-agent
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -  # Add the private key from GitHub Secrets to the agent
+          ssh -v -i ~/.ssh/id_rsa ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }} 'echo "SSH connection successful"'
 
+      - name: Add SSH Key
+        run: |
+          eval "$(ssh-agent -s)"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -  # Add private key from GitHub Secrets
+
+      # Step 2: Add VPS to known_hosts
+      - name: Add VPS to known_hosts
+        run: |
+          ssh-keyscan -H ${{ secrets.DEV_HOST }} >> ~/.ssh/known_hosts  # Avoids manual prompt for known hosts
+
+      # Step 3: SSH to VPS and Deploy
       - name: SSH to VPS and Deploy
         uses: appleboy/ssh-action@v0.1.3
         with:
