--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -33,21 +33,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Test SSH Connection
-        run: |
-          ssh -v -i ~/.ssh/id_rsa ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }} 'echo "SSH connection successful"'
-
+      # Step 1: Add SSH Key to Agent
       - name: Add SSH Key
         run: |
-          eval "$(ssh-agent -s)"
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -  # Add private key from GitHub Secrets
+          eval "$(ssh-agent -s)"  # Start the ssh-agent
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -  # Add the private key
 
-      # Step 2: Add VPS to known_hosts
+      # Step 2: Add VPS to known_hosts to prevent host key verification failure
       - name: Add VPS to known_hosts
         run: |
-          ssh-keyscan -H ${{ secrets.DEV_HOST }} >> ~/.ssh/known_hosts  # Avoids manual prompt for known hosts
+          ssh-keyscan -H ${{ secrets.DEV_HOST }} >> ~/.ssh/known_hosts  # Fetch the host key and add it to known_hosts
 
-      # Step 3: SSH to VPS and Deploy
+      # Step 3: Test SSH Connection (optional, can be removed after confirming it's working)
+      - name: Test SSH Connection
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }} 'echo "SSH connection successful"'
+
+      # Step 4: SSH into VPS and deploy using Docker commands
       - name: SSH to VPS and Deploy
         uses: appleboy/ssh-action@v0.1.3
         with:
