yml file changes

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -39,17 +39,24 @@ jobs:
           eval "$(ssh-agent -s)"  # Start the ssh-agent
           echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -  # Add the private key
 
-      # Step 2: Add VPS to known_hosts to prevent host key verification failure
+      # Step 2: Create the .ssh directory
+      - name: Create .ssh directory
+        run: |
+          mkdir -p ~/.ssh  # Create the .ssh directory if it doesn't exist
+          chmod 700 ~/.ssh  # Set correct permissions
+
+      # Step 3: Add VPS to known_hosts to prevent host key verification failure
       - name: Add VPS to known_hosts
         run: |
           ssh-keyscan -H ${{ secrets.DEV_HOST }} >> ~/.ssh/known_hosts  # Fetch the host key and add it to known_hosts
+          chmod 644 ~/.ssh/known_hosts  # Set the correct permissions for known_hosts
 
-      # Step 3: Test SSH Connection (optional, can be removed after confirming it's working)
+      # Step 4: Test SSH Connection (optional, can be removed after confirming it's working)
       - name: Test SSH Connection
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }} 'echo "SSH connection successful"'
 
-      # Step 4: SSH into VPS and deploy using Docker commands
+      # Step 5: SSH into VPS and deploy using Docker commands
       - name: SSH to VPS and Deploy
         uses: appleboy/ssh-action@v0.1.3
         with:
