--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -48,20 +48,20 @@ jobs:
       # Step 3: Add VPS to known_hosts to prevent host key verification failure
       - name: Add VPS to known_hosts
         run: |
-          ssh-keyscan -H ${{ secrets.DEV_HOST }} >> ~/.ssh/known_hosts  # Fetch the host key and add it to known_hosts
+          ssh-keyscan -H 82.165.239.219 >> ~/.ssh/known_hosts  # Fetch the host key and add it to known_hosts
           chmod 644 ~/.ssh/known_hosts  # Set the correct permissions for known_hosts
 
       # Step 4: Test SSH Connection (optional, can be removed after confirming it's working)
       - name: Test SSH Connection
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }} 'echo "SSH connection successful"'
+          ssh -o StrictHostKeyChecking=no root@82.165.239.219 'echo "SSH connection successful"'
 
       # Step 5: SSH into VPS and deploy using Docker commands
       - name: SSH to VPS and Deploy
         uses: appleboy/ssh-action@v0.1.3
         with:
-          host: ${{ secrets.DEV_HOST }}
-          username: ${{ secrets.DEV_USER }}
+          host: "82.165.239.219"
+          username: "root"
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             docker pull kasramahsouli/hamidi-client:dev
