--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.6.5",
+    "axios-retry": "^4.5.0",
     "emailjs-com": "^3.2.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
