--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Build and Push Docker Image
         run: |
-          docker build --no-cache -t my-app:${{ github.sha }} .
-          docker tag my-app:${{ github.sha }} kasramahsouli/hamidi-client:dev
+          docker build --no-cache -t kasramahsouli/hamidi-client:${{ github.sha }} .
+          docker tag kasramahsouli/hamidi-client:${{ github.sha }} kasramahsouli/hamidi-client:dev
           docker push kasramahsouli/hamidi-client:dev
 
   deploy:
@@ -42,8 +42,8 @@ jobs:
       - name: SSH to VPS and Deploy using password
         run: |
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }} << EOF
-            docker pull kasramahsouli/hamidi-client:dev
-            docker stop my-app || true
-            docker rm my-app || true
-            docker run -d -p 8080:80 --name my-app kasramahsouli/hamidi-client:dev
+          docker pull kasramahsouli/hamidi-client:dev
+          docker stop hamidi-client || true
+          docker rm hamidi-client || true
+          docker run -d -p 8080:80 --name hamidi-client kasramahsouli/hamidi-client:dev
           EOF
