--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -29,8 +29,11 @@ jobs:
 
         # Archive the build folder (React's build output)
       - name: Archive production artifacts
-        run: tar -zcvf build.tar.gz ./dist
+        run: tar -zcvf build.tar.gz dist
         # If you're using Vite, change ./build to ./dist
+
+      - name: List contents after archiving
+        run: ls -la
 
   deploy:
     runs-on: ubuntu-latest
@@ -44,9 +47,13 @@ jobs:
       - name: Install sshpass
         run: sudo apt-get install sshpass
 
+      - name: Print current directory
+        run: pwd
+
       # Use sshpass to SSH into the VPS using password authentication
       - name: SSH to VPS and Deploy using password
         run: |
+
           sshpass -p "${{ secrets.SSH_PASSWORD }}" scp -o StrictHostKeyChecking=no build.tar.gz ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }}:/var/www/vendor-dev
 
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }} << 'EOF'
