--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -50,12 +50,13 @@ jobs:
       - name: Print current directory
         run: pwd
 
+      - name: Copy build.tar.gz to VPS
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" scp -o StrictHostKeyChecking=no ./build.tar.gz root@${{ secrets.DEV_HOST }}:/var/www/vendor-dev/
+
       # Use sshpass to SSH into the VPS using password authentication
       - name: SSH to VPS and Deploy using password
         run: |
-
-          sshpass -p "${{ secrets.SSH_PASSWORD }}" scp -o StrictHostKeyChecking=no build.tar.gz ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }}:/var/www/vendor-dev
-
           sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }} << 'EOF'
             cd /var/www/vendor-dev
             rm -rf dist
