--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -56,10 +56,13 @@ jobs:
           ls -la
           echo "Listing parent directory:"
            ls -la ..
-          echo "Listing parent directory:"
-           ls -la ./src
-          echo "Listing parent directory:"
-           ls -la ./src/dist
+
+      - name: List contents
+        run: |
+          echo "Listing src directory:"
+            ls -la ./src
+           echo "Listing dist directory:"
+            ls -la ./src/dist
 
       - name: Copy build.tar.gz to VPS
         run: |
