--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -35,6 +35,12 @@ jobs:
       - name: List contents after archiving
         run: ls -la
 
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifact
+          path: build.tar.gz
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -47,6 +53,11 @@ jobs:
       - name: Install sshpass
         run: sudo apt-get install sshpass
 
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: build-artifact
+
       - name: Print current directory
         run: pwd
 
@@ -54,15 +65,6 @@ jobs:
         run: |
           echo "Listing current directory:"
           ls -la
-          echo "Listing parent directory:"
-           ls -la ..
-
-      - name: List contents
-        run: |
-          echo "Listing src directory:"
-            ls -la ./src
-           echo "Listing dist directory:"
-            ls -la ./src/dist
 
       - name: Copy build.tar.gz to VPS
         run: |
