--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -14,32 +14,72 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: Build and Push Docker Image
+        uses: actions/checkout@v3
+        # Install Node.js (version based on your project needs)
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18" # or whatever version you need
+      # Install dependencies and build the React app
+      - name: Install dependencies and build
         run: |
-          docker build -t my-app:${{ github.sha }} .
-          docker tag my-app:${{ github.sha }} kasramahsouli/hamidi-client:prod-${{ github.event.inputs.version }}
-          docker push kasramahsouli/hamidi-client:prod-${{ github.event.inputs.version }}
+          npm install
+          npm run build
+
+      - name: List contents after build
+        run: ls -la
+
+        # Archive the build folder (React's build output)
+      - name: Archive production artifacts
+        run: tar -zcvf build.tar.gz dist
+        # If you're using Vite, change ./build to ./dist
+
+      - name: List contents after archiving
+        run: ls -la
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: build-artifact
+          path: build.tar.gz
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
-      - name: Deploy to Production Server via SSH
-        uses: appleboy/ssh-action@v0.1.2
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Install sshpass to use password-based SSH authentication
+      - name: Install sshpass
+        run: sudo apt-get install sshpass
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v3
         with:
-          host: ${{ secrets.PROD_HOST }}
-          username: ${{ secrets.PROD_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script: |
-            docker pull kasramahsouli/hamidi-client:prod-${{ github.event.inputs.version }}
-            docker stop my-app || true
-            docker rm my-app || true
-            docker run -d -p 80:80 --name my-app kasramahsouli/hamidi-client:prod-${{ github.event.inputs.version }}
+          name: build-artifact
+
+      - name: Print current directory
+        run: pwd
+
+      - name: List contents before copying
+        run: |
+          echo "Listing current directory:"
+          ls -la
+
+      - name: Copy build.tar.gz to VPS
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" scp -o StrictHostKeyChecking=no ./build.tar.gz root@${{ secrets.DEV_HOST }}:/var/www/vendor-production/
+
+      # Use sshpass to SSH into the VPS using password authentication
+      - name: SSH to VPS and Deploy using password
+        run: |
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no ${{ secrets.DEV_USER }}@${{ secrets.DEV_HOST }} << 'EOF'
+            cd /var/www/vendor-production
+            rm -rf dist
+            tar -zxvf build.tar.gz
+            rm build.tar.gz
+            sudo chown -R www-data:www-data /var/www/vendor-production
+            sudo systemctl reload nginx
+          EOF
