--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "axios": "^1.6.5",
     "axios-retry": "^4.5.0",
     "emailjs-com": "^3.2.0",
+    "lucide-react": "^0.451.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.9",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
